// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Composer preservation — chrome structure and tokens > preserves the Composer DOM structure and class-list in Agent mode (snapshot) 1`] = `
<div
  class="shrink-0 border-t border-[#1E1E23] bg-[#101014] p-3"
  data-testid="composer"
>
  <div
    class="rounded-[10px] bg-[#131318] border border-[#26262B] p-2.5"
  >
    <div
      data-testid="queue-stub"
    />
    <div
      class="px-0.5"
    >
      <div
        data-testid="attachments-stub"
      />
    </div>
    <textarea
      class="flex w-full rounded-md border-input py-2 focus-visible:outline-none focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 max-h-40 min-h-10 resize-none border-0 bg-transparent px-0.5 pb-2 pt-0 shadow-none focus-visible:ring-0 text-[12.5px] text-[#FAFAFA] placeholder:text-[#52525B]"
      data-testid="composer-textarea"
      placeholder="Message the agent…"
      rows="1"
      style="height: 48px;"
    />
    <div
      class="mt-2.5 flex items-center gap-2"
    >
      <div
        class="flex items-center bg-[#1B1B21] rounded-full p-0.5 shrink-0 border border-[#26262B]"
      >
        <button
          class="px-3 py-0.5 text-[11px] rounded-full font-semibold transition-all text-[#71717A] hover:text-[#A1A1AA]"
          title="Ask: read-only Q&A about your code"
          type="button"
        >
          Ask
        </button>
        <button
          class="px-3 py-0.5 text-[11px] rounded-full font-semibold transition-all text-[#0b0e14] bg-[var(--zoc-ember)] shadow-sm"
          title="Agent: full autonomy — can edit files and run commands"
          type="button"
        >
          Agent
        </button>
      </div>
      <button
        aria-label="Autonomy level: Medium"
        class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-md border border-[#26262B] bg-[#15151A] shrink-0 hover:bg-[#1B1B21] transition-colors"
        title="Autonomy: Medium (click to change)"
        type="button"
      >
        <span
          class="w-1.5 h-1.5 rounded-full bg-primary"
        />
        <span
          class="text-[11px] text-[#A1A1AA]"
        >
          Medium
        </span>
      </button>
      <button
        aria-label="Send"
        class="ml-auto w-7 h-7 rounded-lg bg-gradient-to-br from-[#7C3AED] to-[#9B6AF1] flex items-center justify-center shadow-[0_4px_12px_rgba(124,58,237,0.3)] disabled:opacity-40 disabled:pointer-events-none shrink-0"
        disabled=""
        type="button"
      >
        <span
          class="h-3 w-3 text-white"
          data-icon="Send"
        />
      </button>
    </div>
  </div>
  <div
    class="text-[11px] text-[#52525B] mt-2 px-0.5 leading-snug"
  >
    Zoc can make mistakes — checkpoints let you roll back.
  </div>
</div>
`;

exports[`Composer preservation — chrome structure and tokens > preserves the Composer DOM structure and class-list in Ask mode (snapshot) 1`] = `
<div
  class="shrink-0 border-t border-[#1E1E23] bg-[#101014] p-3"
  data-testid="composer"
>
  <div
    class="rounded-[10px] bg-[#131318] border border-[#26262B] p-2.5"
  >
    <div
      data-testid="queue-stub"
    />
    <div
      class="px-0.5"
    >
      <div
        data-testid="attachments-stub"
      />
    </div>
    <textarea
      class="flex w-full rounded-md border-input py-2 focus-visible:outline-none focus-visible:ring-ring disabled:cursor-not-allowed disabled:opacity-50 max-h-40 min-h-10 resize-none border-0 bg-transparent px-0.5 pb-2 pt-0 shadow-none focus-visible:ring-0 text-[12.5px] text-[#FAFAFA] placeholder:text-[#52525B]"
      data-testid="composer-textarea"
      placeholder="Ask about your code…"
      rows="1"
      style="height: 48px;"
    />
    <div
      class="mt-2.5 flex items-center gap-2"
    >
      <div
        class="flex items-center bg-[#1B1B21] rounded-full p-0.5 shrink-0 border border-[#26262B]"
      >
        <button
          class="px-3 py-0.5 text-[11px] rounded-full font-semibold transition-all text-[#0b0e14] bg-[var(--zoc-info)] shadow-sm"
          title="Ask: read-only Q&A about your code"
          type="button"
        >
          Ask
        </button>
        <button
          class="px-3 py-0.5 text-[11px] rounded-full font-semibold transition-all text-[#71717A] hover:text-[#A1A1AA]"
          title="Agent: full autonomy — can edit files and run commands"
          type="button"
        >
          Agent
        </button>
      </div>
      <span
        aria-label="Read-only mode"
        class="flex items-center gap-1.5 px-1.5 py-0.5 rounded-md border border-[var(--zoc-info)]/40 bg-[var(--zoc-info)]/10 shrink-0"
        title="Ask mode is read-only — no files change"
      >
        <span
          class="w-1.5 h-1.5 rounded-full bg-[var(--zoc-info)]"
        />
        <span
          class="text-[11px] text-[#A1A1AA]"
        >
          Read-only
        </span>
      </span>
      <button
        aria-label="Send"
        class="ml-auto w-7 h-7 rounded-lg bg-gradient-to-br from-[#7C3AED] to-[#9B6AF1] flex items-center justify-center shadow-[0_4px_12px_rgba(124,58,237,0.3)] disabled:opacity-40 disabled:pointer-events-none shrink-0"
        disabled=""
        type="button"
      >
        <span
          class="h-3 w-3 text-white"
          data-icon="Send"
        />
      </button>
    </div>
  </div>
  <div
    class="text-[11px] text-[#52525B] mt-2 px-0.5 leading-snug"
  >
    Ask mode is read-only — no files change. Switch to Agent to make edits.
  </div>
</div>
`;
